# makenl

./: .cvsignore  CMakeLists.txt  FILE_ID.DIZ  file_id.diz  makenl_3.3.0.orig.tar.gz.delta  makenl_3.3.0.orig.tar.gz.id  makenl_3.3.10.orig.tar.gz.delta  makenl_3.3.10.orig.tar.gz.id  makenl_3.3.3.orig.tar.gz.delta  makenl_3.3.3.orig.tar.gz.id  makenl_3.3.5.orig.tar.gz.delta  makenl_3.3.5.orig.tar.gz.id  makenl_3.3.8.orig.tar.gz.delta  makenl_3.3.8.orig.tar.gz.id  makenl_3.4.1.orig.tar.gz.delta  makenl_3.4.1.orig.tar.gz.id  makenl_3.4.4.orig.tar.gz.delta  makenl_3.4.4.orig.tar.gz.id  makenl_3.4.5.orig.tar.gz.delta  makenl_3.4.5.orig.tar.gz.id  makenl_3.4.7.orig.tar.gz.delta  makenl_3.4.7.orig.tar.gz.id  makenl_3.4.orig.tar.gz.delta  makenl_3.4.orig.tar.gz.id  readme!
debian/: NEWS.Debian  README.Debian  README.source  TODO  TODO.Debian  changelog  control  copyright  docs  install  makenl.dirs  makenl.doc-base  makenl.docs  makenl.examples  makenl.install  manpages  postinst  postrm  preinst  prerm  rules  watch
debian/patches/: 00-KeywordSubstitutionNoise.patch  05-IncludeCopyrightPrologAndEpilogInAllSegments.patch  06-ChangeDefaultForMINphoneTo1.patch  10-IncreaseMaximumNodelistSegmentAgeTo7Weeks.patch  KeywordSubstitutionNoise.patch  series
docs/: .cvsignore  CMakeLists.txt  Makefile  cpyright.txt  distrib.ctl  epilog.txt  felten.txt  fts-5000.txt  hist31x.txt  history.txt  hub.ctl  karcher.eng  karcher.txt  makenl.md  makenl.prn  makenl.txt  makepdf.sh  net-l.ctl  net-s.ctl  node.ctl  prolog.txt  read.me  readme.md  regional.ctl  whatsnew.md  whatsnew.txt  zone.ctl
examples/: CMakeLists.txt  DISTRIB.CTL  REGIONAL.CTL  ZONE.CTL  cpyright.txt  epilog.txt  hub.ctl  net-l.ctl  net-s.ctl  node.ctl  prolog.txt  regional.ctl  zone.ctl
old_docs/: cpyright.txt  felten.txt  fts-5000.txt  history.txt  history.txt.bak  karcher.en.txt  karcher.txt  makenl.prn  makenl.txt  read.me
slackware/: Slackbuild  slack-desc
src/: .cvsignore  CMakeLists.txt  Makefile  config.c  config.h  crc16.c  crc16.h  credits.h  exec.c  exec.h  fileutil.c  fileutil.h  fts5.c  fts5.h  ignore.h  indent.pro  lsttool.c  lsttool.h  makeall.bat  makefile.bcd  makefile.bco  makefile.bcw  makefile.bsd  makefile.clangwin  makefile.devc  makefile.djgpp  makefile.dmc  makefile.emx  makefile.emxomf  makefile.freebsd  makefile.hcos2  makefile.icc  makefile.lcc  makefile.linux  makefile.macos  makefile.msc  makefile.msvc  makefile.osx  makefile.pellesc  makefile.sun  (+71 more)
test/: 001.ctl
